--- a/templates/fkz/style/template.css
+++ b/templates/fkz/style/template.css
@@ -42,9 +42,9 @@ h1
 
 h2
 {
-    font-size:25pt;
-    font-family: AppleGara;
-    color: #003366;
+    font-size:19pt;
+    font-family: Quicksand_Book;
+    color: #000;
     margin-bottom: -10px;
 }
 
